--- a/CrecheApp/src/com/wesley/creche/client/desktop/Administration/StaffAdmin/AddNewStaffMemberForm.form
+++ b/CrecheApp/src/com/wesley/creche/client/desktop/Administration/StaffAdmin/AddNewStaffMemberForm.form
@@ -103,7 +103,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Century Gothic" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Add"/>
+        <Property name="text" type="java.lang.String" value="Next"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel5">
